<resources>
    <string name="app_name">QuileiaMedic</string>
    <string name="title_home">Inicio</string>
    <string name="user_name">Nombre del usuario</string>
    <string name="user_pic">User image</string>
    <string name="add_patients">add patients</string>
    <string name="no_data_text">Aún no hay datos que mostrar</string>
    <string name="name_lastname">Nombre y apellido</string>
    <string name="office">Consultorio</string>
    <string name="home">Disponibilidad a domicilio: </string>
    <string name="code">Código de tarjeta profesional</string>
    <string name="button_affirmative">Si</string>
    <string name="button_negative">No</string>
    <string name="specialty">Especialidad</string>
    <string name="button_save">Guardar</string>
    <string name="experience">Años de experiencia: </string>
    <string name="doctor_pic">doctor Pic</string>
    <string name="details">Detalles</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="patientName">Nombre</string>
    <string name="patientLastname">Apellidos</string>
    <string name="patientQuota">Cuota moderadora</string>
    <string name="assignedDoctor">Médico asignado</string>
    <string name="appointmentDate">Fecha de nueva cita</string>
    <string name="patientBirth">Fecha de nacimiento</string>
    <string name="patientId">Dni:</string>
    <string name="appointmentTime">Hora</string>
    <string name="treatment">En tratamiento: </string>
    <string name="cancel">Cancelar</string>
    <string name="type_user">Selecciona el tipo de usuario</string>
    <string name="doctor_home">Médico</string>
    <string name="patient_home">Paciente</string>
    <string name="birthdate">Fecha de nacimiento: </string>
    <string name="nameLastname">Nombres y apellidos</string>
    <string name="patient_pic_d">patient pic</string>
    <string name="last_date">Fecha de última cita:</string>
    <string name="patient_doctor">Último médico asignado:</string>
    <string name="patient_id">Identificación</string>
    <string name="patient_quota">Cuota moderadora: </string>
    <string name="inTreatment">En tratamiento: </string>
    <string name="date_button">Citas</string>
    <string name="new_date_button">Asignar cita</string>
    <string name="date">Fecha</string>
    <string name="assisted_icon">assisted icon</string>
    <string name="on_hold_icon">on hold icon</string>
    <string name="unassisted_icon">unassisted icon</string>
    <string name="history_text">Llegada del paciente en espera</string>
    <string name="treatmentY">En tratamiento: Si</string>
    <string name="treatmentN">En tratamiento: No</string>
    <string name="assisted_button">Marcar asistencia</string>
    <string name="assisted_text">Asistencia del paciente confirmada</string>
    <string name="all_data_required">Todos los campos son obligatorios</string>
    <string name="ident">Identificación</string>
    <string name="unassisted_text">El paciente no asistió a la cita</string>
    <string name="no_appointment">Sin cita</string>
    <string name="no_doctor">Ninguno</string>
    <string name="data_update">Datos actualizados con éxito</string>
    <string name="new_data">Datos guardados con éxito</string>
    <string name="try_again">Error, intenta de nuevo</string>
    <string name="doctor_with_appointments">El médico tiene citas pendientes, no se puede eliminar</string>
    <string name="deleted_user">usuario eliminado con éxito</string>
    <string name="error_deleting_user">Error al eliminar usuario</string>
    <string name="want_to_delete_user">¿Desea eliminar a este usuario?</string>
    <string name="eliminate">Eliminar</string>
    <string name="clear">Limpiar</string>
    <string name="attended_text">El paciente fue atendido</string>
    <string name="signature">Firma del paciente</string>
    <string name="error_loading_image">Error al cargar imagen</string>
    <string name="Sign">Firma</string>
    <string name="example_text">"Aquí va texto"</string>
    <string name="unvalidText">Escribe un formato valido</string>


</resources>