<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.doctor.NewDoctorFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck,UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E4F9FB">

            <ImageView
                android:id="@+id/doctorPicView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/doctor_pic"
                android:src="@drawable/doctor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck" />

            <EditText
                android:id="@+id/doctorNameText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/name_lastname"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/doctorPicView"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/doctorSpecialtyText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/specialty"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/doctorNameText"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/doctorOfficeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/office"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/doctorSpecialtyText"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/doctorCodeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/code"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/doctorOfficeText"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/doctorExperienceText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/experience"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/doctorCodeText"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/home"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/doctorExperienceText" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <RadioButton
                    android:id="@+id/radioButtonY"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/button_affirmative"
                    android:textColor="@android:color/secondary_text_light"
                    tools:ignore="TextContrastCheck"
                    tools:layout_editor_absoluteX="65dp"
                    tools:layout_editor_absoluteY="660dp" />

                <RadioButton
                    android:id="@+id/radioButtonN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/button_negative"
                    android:textColor="@android:color/secondary_text_light"
                    tools:ignore="TextContrastCheck"
                    tools:layout_editor_absoluteX="124dp"
                    tools:layout_editor_absoluteY="660dp" />
            </RadioGroup>

            <Button
                android:id="@+id/saveDoctorButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/button_save"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:backgroundTint="@color/custom_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cancelDoctorButton"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/cancelDoctorButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:backgroundTint="@color/custom_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/saveDoctorButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>